Assertion crash under gs_feature_tile_refresh()
Moving this from a downstream bug report:
https://bugzilla.redhat.com/show_bug.cgi?id=1946257
No details given, just using gnome-software-40.0-2.fc34 and crashed with the below backtrace on assertion:
Apr 05 07:19:41 fedora gnome-software-service.desktop[4247]: **
Apr 05 07:19:41 fedora gnome-software-service.desktop[4247]: Gs:ERROR:../src/gs-feature-tile.c:287:gs_feature_tile_refresh: assertion failed: (fg_rgba_valid)
Apr 05 07:19:41 fedora gnome-software-service.desktop[4247]: Bail out! Gs:ERROR:../src/gs-feature-tile.c:287:gs_feature_tile_refresh: assertion failed: (fg_rgba_valid)
backtace:
Thread 1 (Thread 0x7f0439a02a80 (LWP 4247)):
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:49
set = {__val = {0, 139656184984320, 3432, 139656183655750, 139656184980768, 107, 139656184984320, 4690978025984949760, 140735938902160, 18446744073709551496, 0, 139656200740272, 140735938902160, 94236495039568, 94236495039568, 139656183704152}}
pid = <optimized out>
tid = <optimized out>
#1 0x00007f043d3208a4 in __GI_abort () at abort.c:79
save_stage = 1
act = {__sigaction_handler = {sa_handler = 0x55b526d8d370, sa_sigaction = 0x55b526d8d370}, sa_mask = {__val = {139656199827949, 120, 139656199954759, 94236530619984, 140735938902064, 32, 4690978025984949760, 0, 18446744073709551496, 0, 97, 140735938902160, 94236495039568, 94236495039568, 139656183704152, 94236495036386}}, sa_flags = 1043980204, sa_restorer = 0x55b526bba7f0}
sigs = {__val = {32, 127, 2048, 4690978025984949760, 139655364164512, 18446744073709551496, 0, 140735938902056, 120, 1, 94236527273968, 139656183704152, 120, 1, 94236527273968, 94236529185648}}
#2 0x00007f043e2abccc in g_assertion_message (domain=<optimized out>, file=<optimized out>, line=<optimized out>, func=<optimized out>, message=<optimized out>) at ../glib/gtestutils.c:3052
lstr = "287\000\000\000\000\000\240y\274&\265U\000\000\240J\004'\265U\000\000\000\376\376'\251\263\031A"
s = <optimized out>
#3 0x00007f043e30722f in g_assertion_message_expr (domain=0x55b524cf511a "Gs", file=0x55b524cfbfe2 "../src/gs-feature-tile.c", line=287, func=0x55b524cfcc50 <__func__.1.lto_priv.11> "gs_feature_tile_refresh", expr=<optimized out>) at ../glib/gtestutils.c:3078
s = 0x55b526eeb650 "assertion failed: (fg_rgba_valid)"
#4 0x000055b524ccdc06 in gs_feature_tile_refresh (self=<optimized out>) at ../src/gs-feature-tile.c:287
colors = 0x0
fg_rgba = {red = 4.6559014952513994e-310, green = 4.6559033078853696e-310, blue = 4.6559014981521576e-310, alpha = 421098.2890586555}
fg_rgba_valid = <optimized out>
fg_hsbc = {hue = 4.6558709650183163e-310, saturation = 0, brightness = 6.5948259311522583e-310, contrast = 0}
key_colors = 0x7f040c24dad0
css = 0x0
tile = 0x55b526fb6bd0
app = 0x7f0414285e90
accessible = <optimized out>
markup = <optimized out>
name = 0x0
context = 0x7f03ec050210
icon = 0x7f040c6c0f20
icon_size = <optimized out>
__func__ = "gs_feature_tile_refresh"
#5 0x000055b524cce10b in gs_feature_tile_new (app=0x7f0414285e90) at ../src/gs-feature-tile.c:474
tile = 0x55b526fb6bd0
#6 0x000055b524cce257 in gs_featured_carousel_set_apps (self=0x55b526d99d20, apps=0x55b52704d540) at ../src/gs-featured-carousel.c:435
app = <optimized out>
tile = <optimized out>
i = 0
__func__ = "gs_featured_carousel_set_apps"
#7 0x000055b524cd7d64 in gs_overview_page_get_featured_cb (source_object=0x55b526c49050, res=<optimized out>, user_data=user_data@entry=0x55b526cb4d00) at ../src/gs-overview-page.c:406
self = 0x55b526cb4d00
priv = <optimized out>
plugin_loader = <optimized out>
error = 0x0
list = 0x55b52704d540
#8 0x00007f043e4d0a7a in g_task_return_now (task=0x55b526b81b40) at ../gio/gtask.c:1219
#9 0x00007f043e4d0abd in complete_in_idle_cb (task=task@entry=0x55b526b81b40) at ../gio/gtask.c:1233
#10 0x00007f043e2de6eb in g_idle_dispatch (source=0x7f040c04b800, callback=0x7f043e4d0ab0 <complete_in_idle_cb>, user_data=0x55b526b81b40) at ../glib/gmain.c:5848
again = <optimized out>
#11 0x00007f043e2e246f in g_main_dispatch (context=0x55b526b4fa50) at ../glib/gmain.c:3337
dispatch = 0x7f043e2de6d0 <g_idle_dispatch>
prev_source = 0x0
begin_time_nsec = 378929573396
was_in_call = <optimized out>
user_data = 0x55b526b81b40
callback = 0x7f043e4d0ab0 <complete_in_idle_cb>
cb_funcs = 0x7f043e3c53a0 <g_source_callback_funcs>
cb_data = 0x7f040c4caba0
need_destroy = <optimized out>
source = 0x7f040c04b800
current = 0x55b526b813b0
i = 0
#12 g_main_context_dispatch (context=0x55b526b4fa50) at ../glib/gmain.c:4055
#13 0x00007f043e3363a8 in g_main_context_iterate.constprop.0 (context=context@entry=0x55b526b4fa50, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4131
max_priority = 0
timeout = 0
some_ready = 1
nfds = 4
allocated_nfds = 4
fds = <optimized out>
begin_time_nsec = 378929567655
#14 0x00007f043e2dfba3 in g_main_context_iteration (context=context@entry=0x55b526b4fa50, may_block=may_block@entry=1) at ../glib/gmain.c:4196
retval = <optimized out>
#15 0x00007f043e4fe92d in g_application_run (application=0x55b526b30120, argc=-1549452172, argv=<optimized out>) at ../gio/gapplication.c:2560
arguments = 0x55b526b5e770
status = 0
context = 0x55b526b4fa50
acquired_context = <optimized out>
__func__ = "g_application_run"
#16 0x000055b524ca7937 in main (argc=2, argv=0x7fffa3a53de8) at ../src/gs-main.c:49
status = 0
appinfo = 0x55b526b50850
application = 0x55b526b30120
debug = 0x55b526b24400