gs-feature-tile: Do not abort when the theme is broken

Just print a warning when the theme doesn't provide 'theme_fg_color' and
fallback to black color.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/1228